Fix frontend spacing issue

--- a/client/src/style/ctaColors.scss
+++ b/client/src/style/ctaColors.scss
@@ -123,7 +123,7 @@ body {
       font-size: 1.75rem;
     }
 
-    & svg {
+    .eta-display svg {
       margin-left: 0.5rem;
     }
   }
